# SurfRev65

./: CMakeLists.txt
.github/workflows/: build.yml
Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
SurfRev65_GitHub/: CMakeLists.txt  README.md
SurfRev65_GitHub/Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
